added createthread form and createthread api.

--- a/src/main/resources/forum-server/templates/index.html
+++ b/src/main/resources/forum-server/templates/index.html
@@ -33,6 +33,7 @@
 		<li>Fetch post by subject "ke": <a th:href="@{/posts/subject/ke}">/posts/subject/ke</a></li>
 
 		<li>Get Forum: <a th:href="@{/posts/getforum}">/posts/getforum</a></li>
+		<li>Create New thread Form <a th:href="@{/posts/createthread}">/posts/createthread</a></li>
 	</ul>
 
 	<h3>Spring Boot URLs</h3>
