--- a/src/main/resources/forum-server/templates/posts.html
+++ b/src/main/resources/forum-server/templates/posts.html
@@ -5,7 +5,7 @@
 <head th:replace="header :: copy"></head>
 
 <body>
-<h1>Posts</h1>
+<h3> <a th:href="@{/posts/createthread}">Create Thread</a></h3>
 
 <div th:if="not ${posts}">
     <div class="alert alert-warning m-2">
