--- a/src/main/resources/forum-server/templates/index.html
+++ b/src/main/resources/forum-server/templates/index.html
@@ -33,7 +33,10 @@
 		<li>Fetch post by subject "ke": <a th:href="@{/posts/subject/ke}">/posts/subject/ke</a></li>
 
 		<li>Get Forum: <a th:href="@{/posts/getforum}">/posts/getforum</a></li>
+
 		<li>Create New thread Form <a th:href="@{/posts/createthread}">/posts/createthread</a></li>
+
+		<li>Get Thread <a th:href="@{/posts/thread/999999999}">/posts/thread/999999999</a></li>
 	</ul>
 
 	<h3>Spring Boot URLs</h3>
