--- a/src/main/resources/posts-server/templates/index.html
+++ b/src/main/resources/posts-server/templates/index.html
@@ -32,6 +32,11 @@
 		Get all posts grouped by thread:
 		<a href="/posts/getforum">/posts/getforum</a>
 	</p>
+	<p>
+		Get all threads:
+		<a href="/posts/getthreads">/posts/getthreads</a>
+	</p>
+
 
 	<div th:replace="footer :: copy"></div>
 
