--- a/src/main/resources/forum-server/templates/header.html
+++ b/src/main/resources/forum-server/templates/header.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org">
 
 <head th:fragment="copy">
-    <title>Web Server (Microservices Blog Demo)</title>
+    <title>Forum Server</title>
 
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta
@@ -40,12 +40,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active m-2"><a href="/" th:href="@{/}">Home</a></li>
-                <li class="nav-item m-2">
+
+                <li class="nav-item active m-2"><a href="/posts/getthreads" th:href="@{/posts/getthreads}">ForumThreads</a></li>
+
+                <!-- <li class="nav-item m-2">
                     <a href="https://spring.io/blog/2015/07/14/microservices-with-spring">This Blog</a>
                 </li>
                 <li class="nav-item m-2">
                     <a href="http://spring.io/blog">Spring Blog</a>
-                </li>
+                </li> -->
             </ul>
 
             <ul class="navbar-nav navbar-right bg-light">
