added functionality to add post to the same thread.

--- a/src/main/resources/forum-server/templates/posts.html
+++ b/src/main/resources/forum-server/templates/posts.html
@@ -6,6 +6,7 @@
 
 <body>
 
+<h3><a th:href="@{__${#httpServletRequest.requestURI}__/addtothread}">Add a Post to This Thread</a></h3>
 
 <div th:if="not ${posts}">
     <div class="alert alert-warning m-2">
