--- a/src/main/resources/forum-server/templates/header.html
+++ b/src/main/resources/forum-server/templates/header.html
@@ -41,14 +41,8 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active m-2"><a href="/" th:href="@{/}">Home</a></li>
 
-                <li class="nav-item active m-2"><a href="/posts/getthreads" th:href="@{/posts/getthreads}">ForumThreads</a></li>
+                <li class="nav-item active m-2"><a href="/accounts/login" th:href="@{/accounts/login}">Account Login</a></li>
 
-                <!-- <li class="nav-item m-2">
-                    <a href="https://spring.io/blog/2015/07/14/microservices-with-spring">This Blog</a>
-                </li>
-                <li class="nav-item m-2">
-                    <a href="http://spring.io/blog">Spring Blog</a>
-                </li> -->
             </ul>
 
             <ul class="navbar-nav navbar-right bg-light">
