--- a/src/main/resources/forum-server/templates/index.html
+++ b/src/main/resources/forum-server/templates/index.html
@@ -28,6 +28,8 @@
 
 		<li>Account <a th:href="@{/accounts/search}">Search</a></li>
 
+		<li>Account Login<a th:href="@{/accounts/login}">Account Login</a></li>
+
 		<li>Fetch post by account #123456789: <a th:href="@{/posts/account/123456789}">/posts/account/123456789</a></li>
 
 		<li>Fetch post by subject "ke": <a th:href="@{/posts/subject/ke}">/posts/subject/ke</a></li>
