cleanup and commenting of post service and createThread.html

--- a/src/main/resources/forum-server/templates/createThread.html
+++ b/src/main/resources/forum-server/templates/createThread.html
@@ -33,7 +33,7 @@
         <div class="form-group col-4">
             <label for="text" class="control-label col-xs-2">Body</label>
             <input type="text" class="form-control" id="text"
-                   th:field="*{body}" placeholder="Enter Subject"
+                   th:field="*{body}" placeholder="Enter Body"
                    style="width: 50em;"/>
         </div>
 
