post database changes

--- a/src/main/resources/posts-server/templates/index.html
+++ b/src/main/resources/posts-server/templates/index.html
@@ -6,14 +6,14 @@
 
 <body>	<h1>Microservices - Posts Server</h1>
 
-<p>Posts Server Microservice is running.</p>
+<p>Posts Server Microservice is running. Can Try below links for testing post service</p>
 
 <p>
 	Get Post by accountNumber: <a href="/posts/123456789">/posts/123456789</a>.
 </p>
 <p>
 	Get Posts by thread:
-	<a href="/posts/thread/666666666">/posts/thread/666666666</a>
+	<a href="/posts/thread/888888888">/posts/thread/888888888</a>
 	<a href="/posts/thread/999999999">/posts/thread/999999999</a>
 </p>
 
